force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__AssetWarrantyTermId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetWarrantyTermId__c</fullName>
    <label>Asset Warranty Term</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetWarrantyTermId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>