force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__GenerationMethodCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__GenerationMethodCode__c</fullName>
    <label>Generation Method</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GenerationMethodCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>