force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__ListPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ListPriceAmount__c</fullName>
    <label>List Price Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ListPriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>