force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PriceBookEntryId__c</fullName>
    <label>Price Book Entry</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PriceBookEntryId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>