force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__ProductServiceCampaignItemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductServiceCampaignItemId__c</fullName>
    <label>Product Service Campaign Item</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductServiceCampaignItemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>