force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__RecommendedCrewSizeNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecommendedCrewSizeNumber__c</fullName>
    <label>Recommended Crew Size</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecommendedCrewSizeNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>