force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__rel_1702009452444_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009452444_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkOrderItem_AssetWarrantyTermId_ma_rel</label>
    <referenceTo>ssot__AssetWarrantyTerm__dlm</referenceTo>
    <relationshipLabel>WorkOrderItem_AssetWarrantyTermId_ma_rel</relationshipLabel>
    <relationshipName>rel_1702009452444_end</relationshipName>
    <type>Lookup</type>
</CustomField>