force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__rel_1702009453958_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009453958_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkOrderItem_AddressId_map_Address__rel</label>
    <referenceTo>ssot__Address__dlm</referenceTo>
    <relationshipLabel>WorkOrderItem_AddressId_map_Address__rel</relationshipLabel>
    <relationshipName>rel_1702009453958_end</relationshipName>
    <type>Lookup</type>
</CustomField>