force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__rel_1702009462334_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009462334_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkOrderItem_ReturnOrderProductId_m_rel</label>
    <referenceTo>ssot__ReturnOrderProduct__dlm</referenceTo>
    <relationshipLabel>WorkOrderItem_ReturnOrderProductId_m_rel</relationshipLabel>
    <relationshipName>rel_1702009462334_end</relationshipName>
    <type>Lookup</type>
</CustomField>