force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__ReturnOrderProductId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReturnOrderProductId__c</fullName>
    <label>Return Order Product</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReturnOrderProductId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>