force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__RootWorkOrderItemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RootWorkOrderItemId__c</fullName>
    <label>Root Work Order Item</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RootWorkOrderItemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>