force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__SubTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubTotalAmount__c</fullName>
    <label>Sub Total Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubTotalAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>