force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__SuggestedMaintenanceDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__SuggestedMaintenanceDateTime__c</fullName>
    <label>Suggested Maintenance DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SuggestedMaintenanceDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>