force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__WorkOrderId__c.field-meta.xml
<CustomField>
    <fullName>ssot__WorkOrderId__c</fullName>
    <label>Work Order</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WorkOrderId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>