force-app/main/default/objects/ssot__WorkOrderItem__dlm/fields/ssot__WorkOrderItemPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__WorkOrderItemPriority__c</fullName>
    <label>Work Order Item Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WorkOrderItemPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>